Use resource limits for heap size, mobs prototype
Signed-off-by: Byron Marohn <combustible@live.com>